<resources>
    <string name="app_name">DHBW-Verwaltung</string>
    <string name="edit_loginMail">DHBW-Mail</string>
    <string name="edit_loginPassword">Passwort</string>
    <string name="button_login">Anmelden</string>
    <string name="button_logoff">Abmelden</string>
    <string name="view_Notizen">Notizen</string>
    <string name="view_Fächer">Fächer</string>
    <string name="view_Gruppen">Gruppen</string>
    <string name="view_Professoren">Professoren</string>
    <string name="view_Sekretariat">Sekretariat</string>
    <string name="view_Studenten">Studenten</string>
    <string name="view_Einstellungen">Einstellungen</string>
<<<<<<< HEAD
    // Prof view Strings----- Schulz
    <string name="name_SSchulz">Stephan Schulz</string>
    <string name="ort_SSchulz">Rotebühlplatz 41; Raum: 0.01; 70178 Stuttgart</string>
    <string name="mail_SSchulz">stephan.schulz@dhbw-stuttgart.de</string>
   // Hladik
    <string name="name_Hladik">Jan Hladik</string>
    <string name="ort_Hladik">Rotebühlplatz 41; Raum: 0.03; 70178 Stuttgart</string>
    <string name="mail_Hladik">Jan.Hladik@dhbw-stuttgart.de</string>
    //Strey
    <string name="name_Strey">Alfred Strey</string>
    <string name="ort_Strey">Rotebühlplatz 41; Raum: 0.05; 70178 Stuttgart</string>
    <string name="mail_Strey">alfred.strey@dhbw-stuttgart.de</string>
    <string name="checkbox_Angemeldet">Angemeldet bleiben</string>
    // Sec view------------------------- 1. Studienjahr
    <string name="jahr1">1. Studienjahr</string>
    <string name="name_Jahr1">Carina Milow</string>
    <string name="Info_Jahr1">Tel.: 0711/1849-4517 / E-Mail: carina.millow@dhbw-stuttgart.de</string>
    // 2. Studienjahr
    <string name="jahr2">2. Studienjahr</string>
    <string name="name_Jahr2">Christine Rohne</string>
    <string name="Info_Jahr2">Tel.: 0711/1849-4513 / E-Mail: christine.rohne@dhbw-stuttgart.de</string>
    // 3. Studienjahr
    <string name="jahr3">3. Studienjahr</string>
    <string name="name_jahr3">Andrea Dölker </string>
    <string name="Info_Jahr3">Tel.: 0711/1849-4516 / E-Mail: andrea.doelker@dhbw-stuttgart.de</string>
=======
>>>>>>> parent of 1d04abf... stay logged in (FUNKTIONIERT NOCH NICHT)
</resources>
